using renderInputComponent prop for autosuggest, fixed CSS, removing Dev Portal from Footer on mobile

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -2,40 +2,47 @@
 
 .wkp-search {
   position: absolute;
-  top: 25px;
+  top: 26px;
   z-index: 2; // To be above header div, in order to be clickable.
   right: 320px;
   left: 400px;
 
+  .wkp-search-toggle-container {
+    .wkp-search-input {
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 2px solid #b7b7b7;
+    }
+  }
+
   .wkp-search-button {
     border: none;
     color: white;
-    height: 40px;
+    height: 42px;
     width: 46px;
-    position: absolute;
-    top: 2px;
     font-size: 16px;
     padding-top: 4px;
+    flex: 0 1 auto;
 
     &.wkp-search-button-clear {
-      right: 44px;
       background: none;
       color: #666;
     }
 
     &.wkp-search-button-submit {
       background-color: $brand-primary;
-      right: -2px;
     }
   }
 
   .react-autosuggest__input {
-    border: 2px solid #b7b7b7;
+    border: 0;
     font-size: 14px;
-    padding: 12px 80px 12px 15px;
-    width: calc(100% - 95px);
+    padding: 12px 0 12px 15px;
     border-radius: 0;
     -webkit-appearance: none;
+    flex: 2 1 auto;
 
     &::-ms-clear {
       display: none;
@@ -115,6 +122,7 @@
   &.tm-w-s,
   &.tm-w-xs {
     .wkp-search {
+      top: 4.5px;
       right: 9px;
       max-width: 100%;
       left: 55px;
@@ -122,6 +130,17 @@
 
     .wkp-search-toggle-container {
       display: none;
+    }
+
+    .wkp-search-toggle-container--open {
+      .wkp-search-input {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid #b7b7b7;
+        background-color: white;
+        width: 100%;
+      }
     }
 
     .wkp-search-toggle-button {
@@ -140,21 +159,18 @@
     .wkp-search-toggle-button {
       margin-right: 75px;
     }
-
-    .wkp-search-toggle-container--open {
-      margin: 0;
-    }
   }
 
   &.tm-w-xs,
   &.tm-w-s {
     .wkp-search-button {
-      height: 39px;
+      width: 40px;
     }
 
     .react-autosuggest__input {
+      width: calc(100% - 90px);
+      padding: 12px 0 12px 15px;
       font-size: 16px;
-      padding-bottom: 9px;
     }
   }
 }
