--- a/src/components/TrafimageMaps/TrafimageMaps.scss
+++ b/src/components/TrafimageMaps/TrafimageMaps.scss
@@ -149,10 +149,6 @@
       }
     }
 
-    .wkp-search {
-      top: 6px;
-    }
-
     .wkp-topic-content {
       border-bottom: 1px solid #eee;
 
